# statick-planning

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  clean.sh  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  statick_tool.html  statick_tool.plugins.discovery.html  statick_tool.plugins.html  statick_tool.plugins.tool.html  tox.ini
.github/workflows/: deploy.yaml  tests.yaml
_sources/: index.rst.txt  statick_tool.plugins.tool.rst.txt
docs/: Makefile
docs/source/: conf.py  statick_tool.plugins.discovery.rst  statick_tool.plugins.tool.rst
rsc/: planning-config.yaml
src/statick_planning/plugins/tool/: val_parser_tool_plugin.py  val_validate_tool_plugin.py  validate_tool_plugin.py  validate_tool_plugin.yapsy-plugin
tests/pddl_discovery_plugin/: test_pddl_discovery_plugin.py
tests/val_parser_tool_plugin/: test_val_parser_tool_plugin.py
tests/val_validate_tool_plugin/: test_val_validate_tool_plugin.py
tests/validate_tool_plugin/: test_validate_tool_plugin.py
tests/validate_tool_plugin/rsc/: config.yaml
